3931.	[cleanup]	Cleanup how dlz grammer is defined. [RT #36879]

3929.	[bug]		'host -a' needed to clear idnoptions. [RT #36963]

3928.	[test]		Improve rndc system test. [RT #36898]

3927.	[bug]		dig: report PKCS#11 error codes correctly when
			compiled with --enable-native-pkcs11. [RT #36956]

3926.	[doc]		Added doc for geoip-directory. [RT #36877]

3925.	[bug]		DS lookup of RFC 1918 empty zones failed. [RT #36917]

3924.	[bug]		Improve 'rndc addzone' error reporting. [RT #35187]

3923.	[bug]		Sanity check the xml2-config output. [RT #22246]

3922.	[bug]		When resigning, dnssec-signzone was removing
			all signatures from delegation nodes. It now
			retains	DS and (if applicable) NSEC signatures.
			[RT #36946]

3921.	[bug]		AD was inappopriately set on RPZ responses. [RT #36833]

3919.	[bug]		dig: continue to next line if a address lookup fails
			in batch mode. [RT #36755]

3918.	[doc]		Update check-spf documentation. [RT #36910]

3917.	[bug]		dig, nslookup and host now continue on names that are
			too long after applying a search list elements.
			[RT #36892]

3916.	[contrib]	zone2sqlite checked wrong result code.  Address
			compiler warnings. [RT #36931]

3915.	[bug]		Address a assertion if a route event arrived while
			shutting down. [RT #36887]

	--- 9.10.1b2 released ---

3914.	[bug]		Allow the URI target and CAA value fields to
			be zero length. [RT #36737]

3913.	[bug]		Address race issue in dispatch. [RT #36731]

3912.	[bug]		Address some unrecoverable lookup failures. [RT #36330]

3910.	[bug]		Fix races to free event during shutdown. [RT #36720]

3909.	[bug]		When computing the number of elements required for a
			acl count_acl_elements could have a short count leading
			to a assertion failure.  Also zero out new acl elements
			in dns_acl_merge.  [RT #36675]

3908.	[bug]		rndc now differentiates between a zone in multiple
			views and a zone that doesn't exist at all. [RT #36691]

3907.	[cleanup]	Alphabetise rndc help. [RT #36683]
