@@ -191,5 +191,53 @@ $CHECKCONF -z altdlz.conf > /dev/null 2>&1 || ret=1
 if [ $ret != 0 ]; then echo "I:failed"; ret=1; fi
 status=`expr $status + $ret`
 
+echo "I: check that check-names fails as configured"
+ret=0
+$CHECKCONF -z check-names-fail.conf > checkconf.out1 2>&1 && ret=1
+grep "near '_underscore': bad name (check-names)" checkconf.out1 > /dev/null || ret=1
+grep "zone check-names/IN: loaded serial" < checkconf.out1 > /dev/null && ret=1
+if [ $ret != 0 ]; then echo "I:failed"; ret=1; fi
+status=`expr $status + $ret`
+
+echo "I: check that check-mx fails as configured"
+ret=0
+$CHECKCONF -z check-mx-fail.conf > checkconf.out2 2>&1 && ret=1
+grep "near '10.0.0.1': MX is an address" checkconf.out2 > /dev/null || ret=1
+grep "zone check-mx/IN: loaded serial" < checkconf.out2 > /dev/null && ret=1
+if [ $ret != 0 ]; then echo "I:failed"; ret=1; fi
+status=`expr $status + $ret`
+
+echo "I: check that check-dup-records fails as configured"
+ret=0
+$CHECKCONF -z check-dup-records-fail.conf > checkconf.out3 2>&1 && ret=1
+grep "has semantically identical records" checkconf.out3 > /dev/null || ret=1
+grep "zone check-dup-records/IN: loaded serial" < checkconf.out3 > /dev/null && ret=1
+if [ $ret != 0 ]; then echo "I:failed"; ret=1; fi
+status=`expr $status + $ret`
+
+echo "I: check that check-mx fails as configured"
+ret=0
+$CHECKCONF -z check-mx-fail.conf > checkconf.out4 2>&1 && ret=1
+grep "failed: MX is an address" checkconf.out4 > /dev/null || ret=1
+grep "zone check-mx/IN: loaded serial" < checkconf.out4 > /dev/null && ret=1
+if [ $ret != 0 ]; then echo "I:failed"; ret=1; fi
+status=`expr $status + $ret`
+
+echo "I: check that check-mx-cname fails as configured"
+ret=0
+$CHECKCONF -z check-mx-cname-fail.conf > checkconf.out5 2>&1 && ret=1
+grep "MX.* is a CNAME (illegal)" checkconf.out5 > /dev/null || ret=1
+grep "zone check-mx-cname/IN: loaded serial" < checkconf.out5 > /dev/null && ret=1
+if [ $ret != 0 ]; then echo "I:failed"; ret=1; fi
+status=`expr $status + $ret`
+
+echo "I: check that check-srv-cname fails as configured"
+ret=0
+$CHECKCONF -z check-srv-cname-fail.conf > checkconf.out6 2>&1 && ret=1
+grep "SRV.* is a CNAME (illegal)" checkconf.out6 > /dev/null || ret=1
+grep "zone check-mx-cname/IN: loaded serial" < checkconf.out6 > /dev/null && ret=1
+if [ $ret != 0 ]; then echo "I:failed"; ret=1; fi
+status=`expr $status + $ret`
+
 echo "I:exit status: $status"
 exit $status
